Zadanie 1.